--- a/mystyle.css
+++ b/mystyle.css
@@ -4,10 +4,6 @@
 
 body {
     font-family: 'Baloo Bhaina 2', cursive;
-/*
-    max-width: 800px;
-    margin: auto;
-*/
 }
     
 .welcomeText {
@@ -16,7 +12,7 @@ body {
     font-size: 20px;
 }
 
-input {
+.field {
   width: 40%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -57,14 +53,19 @@ form {
 }
 
 .button {
-    background-color: aqua;
-    color: #fff;
+    background-color: #f3730b;
+    color: #000;
     border-radius: 15px;
     transition: 0.4s ease-out;
     margin-top: 40px;
-    width: 25%;
+    width: 20%;
+    padding: 5px;
 }
 
 .button:hover {
-    background-color: #0ba7a7;
+    background-color: #c05b09;
+}
+
+#search_button {
+    margin-left: -350px;
 }
